# ocean

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
ocean/: config.py  llm_integration.py  main.py  store_interface.py
