[tool.poetry]
name = "ocean"
version = "0.1.0"
description = ""
authors = ["Thibaud Veron"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
haystack = "^0.42"
sentence-transformers = "^3.0.1"
gradio = "^4.43.0"
anthropic-haystack = "^1.0.0"
transformers = {extras = ["sentencepiece", "torch"], version = "^4.44.2"}


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"


[tool.poetry.group.test.dependencies]
trafilatura = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
